firebase auth integration completed

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
     background-image: url('https://i.ibb.co/Th8wfqz/pattern-1.png');
     background-repeat: no-repeat;
     /* background-size: cover;   */
-    background-color: #D4ECC1;
+    background-color: #BEB996;
     background-position: bottom;
 }
 
